--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -41,4 +41,20 @@ body {
 //===============================================================================
 // STYLES
 //===============================================================================
+#save-btn {
+  border: 0;
+  appearance: none;
+  background-color: hsl( 220, 100, 50 );
+  position: fixed;
+  font-size: 2em;
+  color: white;
+  font-weight: 700;
+  margin: 1em;
+  border-radius: 0.1em;
+  padding: 0.2em 0.4em 0.1em;
+  transition: background-color 0.25s;
 
+  &:hover {
+    background-color: hsl( 220, 100, 40 );
+  }
+}
