--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -56,6 +56,7 @@ body {
   padding: 0.2em 0.4em 0.1em;
   transition: background-color 0.25s;
   opacity: 0.25;
+  font-family: '1CamBam_Stick_3';
 
   &:hover {
     background-color: hsl( 220, 100, 40 );
